# path_helper

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  test.cmd
lib/: CMakeLists.txt  lib_test.cpp  lib_test.h  unix_datafile.hpp  windows_datafile.hpp
tests/: CMakeLists.txt  doctest.cpp  is_executable_test.cpp
